# rspc-test

api/: Cargo.toml
api/src/: main.rs
api/src/core/: context.rs  event.rs  mod.rs
api/src/router/: mod.rs
web/: package.json  tsconfig.json
web/app/lib/: api.ts
web/app/routes/: _index.tsx
