[package]
name = "rspc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rspc = { version = "1.0.0-rc.5", features = ["axum", "unstable"] }
specta = { git = 'https://github.com/oscartbeaumont/specta.git', rev = "ca8151f16e6fc0fd3a18bef1a1fd35f481f9588f", default-features = false, features = [
    "typescript",
] }
httpz = "0.0.6"
axum = { version = "0.6.20", features = ["ws", "http2"] }
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
], default-features = false }
tower-http = { version = "0.4.4", default-features = false, features = [
    "cors",
] }
tower-cookies = "0.8.0"
tower = "0.4.13"
async-stream = "0.3.5"
cookie = "0.17.0"
tokio-stream = "0.1.15"
futures = "0.3.28"

[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "ca8151f16e6fc0fd3a18bef1a1fd35f481f9588f" }
